--- a/HEOBP_v4.vcxproj
+++ b/HEOBP_v4.vcxproj
@@ -176,14 +176,18 @@
 		<ClCompile Include="src\BlinkingParticle.cpp" />
 		<ClCompile Include="src\FastParticle.cpp" />
 		<ClCompile Include="src\Particle.cpp" />
+		<ClCompile Include="src\ParticleReaper.cpp" />
 		<ClCompile Include="src\Spawner.cpp" />
+		<ClCompile Include="src\Test.cpp" />
 	</ItemGroup>
 	<ItemGroup>
 		<ClInclude Include="src\ofApp.h" />
 		<ClInclude Include="src\BlinkingParticle.h" />
 		<ClInclude Include="src\FastParticle.h" />
 		<ClInclude Include="src\Particle.h" />
+		<ClInclude Include="src\ParticleReaper.h" />
 		<ClInclude Include="src\Spawner.h" />
+		<ClInclude Include="src\Test.h" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
